<?xml version="1.0"?>
<package>
  <name>bezier_curve</name>
  <version>0.1.0</version>
  <description>The bezier_curve package</description>

  <maintainer email="hamal.marino@gmail.com">Hamal Marino</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/some_website</url> -->

  <author email="hamal.marino@gmail.com">Hamal Marino</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>dual_manipulation_shared</build_depend> -->
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <run_depend>dual_manipulation_shared</run_depend> -->
  <!-- <run_depend>message_runtime</run_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>